# blame-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
examples/: basic_usage.rs  debug_example.rs  multi_revision.rs  rev1.txt  rev2.txt
examples/revisions/: rev1.txt  rev2.txt  rev3.txt  rev4.txt  rev5.txt  rev6.txt  rev7.txt  rev8.txt  rev9.txt
src/: blame.rs  lib.rs  types.rs
tests/: fixture_tests.rs
tests/fixtures/line_modification/: expected.json  rev1.txt
tests/fixtures/multiple_revisions/: expected.json
tests/fixtures/simple_add/: expected.json
xtask/src/: main.rs
